--- a/RStudio/lecture/RStudio.Rmd
+++ b/RStudio/lecture/RStudio.Rmd
@@ -14,34 +14,47 @@ output:
 * "RStudio is an integrated development environment (IDE) for R."
 * It helps the user use R.
 * R, in essence is just the a console that takes commands from you typing into it
+* Is NOT dropdown statistical tools (such as Stata)
 * Snapshots taken from http://ayeimanol-r.net/2013/04/21/289/
 
+## RStudio/R Console ![Console](r-rstudio-1-3-console.png)
 
-## ![Console](r-rstudio-1-3-console.png)
+## RStudio/R Console
+
+* Where code is executed (where things happen)
+* You can type here for things interactively
+* Code is **not saved** on your disk
 
 
-## ![Console](r-rstudio-1-3-script.png)
+## Script/Editor ![Script](r-rstudio-1-3-script.png)
 
+## RStudio/R Script/Rmarkdown files
 
-This is an R Markdown presentation. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+* Where files open to
+* Have R code and comments in them
+* Can highlight and press (CMD+Enter (Mac) or Ctrl+Enter (Windows)) to run the code
+* Code is saved on your disk
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document.
+## Workspace/Environment ![Workspace](r-rstudio-1-ggplot-point-2.png)
 
-## Slide with Bullets
+## Workspace/Environment
 
-- Bullet 1
-- Bullet 2
-- Bullet 3
+Workspace/Environment
 
-## Slide with R Code and Output
+* Tells you what **objects** are in R
+* What exists in memory
 
-```{r}
-summary(cars)
-```
+History
 
-## Slide with Plot
+* Shows previous commands.  Good to look at for debugging, but **don't rely** on it as a script.  Make a script!
 
-```{r, echo=FALSE}
-plot(cars)
-```
+## Other Panes
+
+* **Packages** - list of R packages that are loaded in memory
+    * Packages are a set of functions written by R users
+    * We write packages - some are good, some are not so good
+* **Files** - shows the files on your computer of the directory you are working in
+* **Viewer** - can view data or R objects
+* **Help** - shows help of R commands
+* **Plots** - pretty pictures
 
