added intro pdf

--- a/Intro/lecture/Intro.Rmd
+++ b/Intro/lecture/Intro.Rmd
@@ -1,12 +1,11 @@
 ---
-title:  Introduction to R
-author: Andrew Jaffe
-date: January 4, 2016
+title: "Introduction to R"
+author: "Andrew Jaffe"
+date: "January 4, 2016"
 output:
+  beamer_presentation: default
   ioslides_presentation:
     css: ../../styles.css
-  pdf_document:
-    toc: false
 --- 
 
 ## Welcome to class!
