--- a/index.Rmd
+++ b/index.Rmd
@@ -26,36 +26,35 @@ Class:
 
 | Day  | Date  |  Module  | Resources  |  Description |
 |---|---|---|---|---|
-| 1  | 2016-01-04  |   | [Try R](http://tryr.codeschool.com/)  | Finish all modules  |
+| 1  | 2016-01-04  | Homework 1  | [Try R](http://tryr.codeschool.com/)  | Finish all modules  |
+| 1  | 2016-01-04  | Module 1  | [HTML](Intro/lecture/Intro.html), [PDF](Intro/lecture/Intro.pdf)  | Class Introduction  |
+| 1  | 2016-01-04  | Module 2  | [HTML](RStudio/lecture/RStudio.html), [PDF](RStudio/lecture/RStudio.pdf) | R Studio  |
+| 1  | 2016-01-04  | Module 3  | [HTML](Basic_R/lecture/Basic_R.html), [PDF](Basic_R/lecture/Basic_R.pdf) | Basic R  |
+| 1  | 2016-01-04  | Module 4  | [HTML](Data_IO/lecture/Data_IO.html), [PDF](Data_IO/lecture/Data_IO.pdf) | Data Import/Output  |
 |---|---|---|---|---|
 
-<!--
-| 1  | 2015-06-15  | Module 1  | [lecSlides](modules/module1.html), [lecNotes](modules/module1.pdf)  | Introduction to R  |
-| 1  | 2015-06-15  | Module 2  | [lecSlides](modules/module2.html), [lecNotes](modules/module2.pdf), [code](https://github.com/andrewejaffe/summerR_2015/blob/gh-pages/modules/module2.R), [lab](labs/module2_lab.R), [key](labs/module2_lab_key.R)| R variables  |
-| 1  | 2015-06-15  | Module 3  | [lecSlides](modules/module3.html), [lecNotes](modules/module3.pdf), [code](https://github.com/andrewejaffe/summerR_2015/blob/gh-pages/modules/module3.R), [lab](labs/module3_lab.R), [key](labs/module3_lab_key.R)  | Data Classes  |
+<!-- | 2  | 2016-06-16  | HW2  | [code](hw/Homework2.R)  |   |
+| 2  | 2016-06-16  | Module 4  | [lecSlides](modules/module4.html), [lecNotes](modules/module4.pdf), [code](https://github.com/andrewejaffe/summerR_2016/blob/gh-pages/modules/module4.R), [lab](labs/module4_lab.R), [key](labs/module4_lab_review.html)  | Data Input  |
+| 2  | 2016-06-16  | Module 5  | [lecSlides](modules/module5.html), [lecNotes](modules/module5.pdf), [code](https://github.com/andrewejaffe/summerR_2016/blob/gh-pages/modules/module5.R), [lab](labs/module5_lab.txt)  | Data I/O + Subset |
+| 2  | 2016-06-16  | Module 6  | [lecSlides](modules/module6.html), [lecNotes](modules/module6.pdf), [code](https://github.com/andrewejaffe/summerR_2016/blob/gh-pages/modules/module6.R), [lab](labs/module6_lab.R), [key](labs/module6_lab_key.R) | Manipulation |
 |---|---|---|---|---|
-| 2  | 2015-06-16  | HW2  | [code](hw/Homework2.R)  |   |
-| 2  | 2015-06-16  | Module 4  | [lecSlides](modules/module4.html), [lecNotes](modules/module4.pdf), [code](https://github.com/andrewejaffe/summerR_2015/blob/gh-pages/modules/module4.R), [lab](labs/module4_lab.R), [key](labs/module4_lab_review.html)  | Data Input  |
-| 2  | 2015-06-16  | Module 5  | [lecSlides](modules/module5.html), [lecNotes](modules/module5.pdf), [code](https://github.com/andrewejaffe/summerR_2015/blob/gh-pages/modules/module5.R), [lab](labs/module5_lab.txt)  | Data I/O + Subset |
-| 2  | 2015-06-16  | Module 6  | [lecSlides](modules/module6.html), [lecNotes](modules/module6.pdf), [code](https://github.com/andrewejaffe/summerR_2015/blob/gh-pages/modules/module6.R), [lab](labs/module6_lab.R), [key](labs/module6_lab_key.R) | Manipulation |
+| 3  | 2016-06-17  | Homework 3  | [HW](hw/homework3.R) | Homework |
+| 3  | 2016-06-17  | Module 7  | [lecSlides](modules/module7.html), [lecNotes](modules/module7.pdf), [code](https://github.com/andrewejaffe/summerR_2016/blob/gh-pages/modules/module7.R), [lab](labs/module7_lab.R), [key](labs/module7_lab_key.R)  | Summarization |
+| 3  | 2016-06-17  | Module 8  | [lecSlides](modules/module8.html), [lecNotes](modules/module8.pdf), [code](https://github.com/andrewejaffe/summerR_2016/blob/gh-pages/modules/module8.R), [lab](labs/module8_lab.R), [key](labs/module8_lab_key.R)  | Visualization |
 |---|---|---|---|---|
-| 3  | 2015-06-17  | Homework 3  | [HW](hw/homework3.R) | Homework |
-| 3  | 2015-06-17  | Module 7  | [lecSlides](modules/module7.html), [lecNotes](modules/module7.pdf), [code](https://github.com/andrewejaffe/summerR_2015/blob/gh-pages/modules/module7.R), [lab](labs/module7_lab.R), [key](labs/module7_lab_key.R)  | Summarization |
-| 3  | 2015-06-17  | Module 8  | [lecSlides](modules/module8.html), [lecNotes](modules/module8.pdf), [code](https://github.com/andrewejaffe/summerR_2015/blob/gh-pages/modules/module8.R), [lab](labs/module8_lab.R), [key](labs/module8_lab_key.R)  | Visualization |
+| 4  | 2016-06-18  | Module 9  | [lecSlides](modules/module9.html), [lecNotes](modules/module9.pdf), [code](https://github.com/andrewejaffe/summerR_2016/blob/gh-pages/modules/module9.R), [lab](labs/module9_lab.R), [key](labs/module9_lab_key.R)  | Data cleaning |
+| 4  | 2016-06-18  | Module 10  | [lecSlides](modules/module10.html), [lecNotes](modules/module10.pdf),  [code](https://github.com/andrewejaffe/summerR_2016/blob/gh-pages/modules/module10.R) | Lists and functions |
+| 4  | 2016-06-18  | Module 11  | [lecSlides](modules/module11.html), [lecNotes](modules/module11.pdf),  [code](https://github.com/andrewejaffe/summerR_2016/blob/gh-pages/modules/module11.R) | Statistics |
 |---|---|---|---|---|
-| 4  | 2015-06-18  | Module 9  | [lecSlides](modules/module9.html), [lecNotes](modules/module9.pdf), [code](https://github.com/andrewejaffe/summerR_2015/blob/gh-pages/modules/module9.R), [lab](labs/module9_lab.R), [key](labs/module9_lab_key.R)  | Data cleaning |
-| 4  | 2015-06-18  | Module 10  | [lecSlides](modules/module10.html), [lecNotes](modules/module10.pdf),  [code](https://github.com/andrewejaffe/summerR_2015/blob/gh-pages/modules/module10.R) | Lists and functions |
-| 4  | 2015-06-18  | Module 11  | [lecSlides](modules/module11.html), [lecNotes](modules/module11.pdf),  [code](https://github.com/andrewejaffe/summerR_2015/blob/gh-pages/modules/module11.R) | Statistics |
-|---|---|---|---|---|
-| 5  | 2015-06-19  | Module 12 lecture | [lecSlides](modules/module12.html), [lecNotes](modules/module12.pdf), [code](https://github.com/andrewejaffe/summerR_2015/blob/gh-pages/modules/module12.R)  | Reproducible research  |
-| 5  | 2015-06-19  | Module 12 lab | [lab](labs/module12_lab.R), [illusion R Markdown](labs/illusion.Rmd), [illusion Word](labs/illusion.docx), [part 2 Rmd](labs/module12_lab_part2.Rmd), [part 2 html](labs/module12_lab_part2.html)  | Reproducible research (practical) |
-| 5  | 2015-06-19  | Module 13  | [lecSlides](modules/mapping_module.html),  [code](https://github.com/andrewejaffe/summerR_2015/blob/gh-pages/modules/mapping_module.R), [lab](labs/mapping_module_lab.R) | Mapping Tools  |
+| 5  | 2016-06-19  | Module 12 lecture | [lecSlides](modules/module12.html), [lecNotes](modules/module12.pdf), [code](https://github.com/andrewejaffe/summerR_2016/blob/gh-pages/modules/module12.R)  | Reproducible research  |
+| 5  | 2016-06-19  | Module 12 lab | [lab](labs/module12_lab.R), [illusion R Markdown](labs/illusion.Rmd), [illusion Word](labs/illusion.docx), [part 2 Rmd](labs/module12_lab_part2.Rmd), [part 2 html](labs/module12_lab_part2.html)  | Reproducible research (practical) |
+| 5  | 2016-06-19  | Module 13  | [lecSlides](modules/mapping_module.html),  [code](https://github.com/andrewejaffe/summerR_2016/blob/gh-pages/modules/mapping_module.R), [lab](labs/mapping_module_lab.R) | Mapping Tools  |
 
 <!-- Add links to the rest of the material as we go
 
-| 5  | 2015-06-19  | Module X  | [lecSlides](modules/moduleX.html), [code](), [lab](), [key]()  |   |
+| 5  | 2016-06-19  | Module X  | [lecSlides](modules/moduleX.html), [code](), [lab](), [key]()  |   |
 
-| 5  | 2015-06-19  | Module 12 lab | [lab](labs/module12_lab.R), [illusion R Markdown](labs/illusion.Rmd), [illusion Word](labs/illusion.docx), [part 2 Rmd](labs/module12_lab_part2.Rmd), [part 2 html](labs/module12_lab_part2.html), [key](labs/module12_lab_key.R) | Reproducible research (practical) |
+| 5  | 2016-06-19  | Module 12 lab | [lab](labs/module12_lab.R), [illusion R Markdown](labs/illusion.Rmd), [illusion Word](labs/illusion.docx), [part 2 Rmd](labs/module12_lab_part2.Rmd), [part 2 html](labs/module12_lab_part2.html), [key](labs/module12_lab_key.R) | Reproducible research (practical) |
 -->
 
 Feel free to submit typos/errors/etc via the github repository associated with the class: 
