--- a/Intro/lecture/Intro.Rmd
+++ b/Intro/lecture/Intro.Rmd
@@ -8,6 +8,11 @@ output:
     css: ../../styles.css
 --- 
 
+```{r, echo = FALSE}
+library(knitr)
+opts_chunk$set(comment = "")
+```
+
 ## Welcome to class!
 
 1. Introductions
