--- a/Knitr/lecture/Knitr.Rmd
+++ b/Knitr/lecture/Knitr.Rmd
@@ -1,138 +1,281 @@
 ---
-title: "Reproducible research"
-subtitle: Module 12
-author: "Leonardo Collado-Torres"
-date: "June 19, 2015"
-output:
-  ioslides_presentation:
-    css: styles.css
+title: "Title"
+author: "John Muschelli"
+date: "January 9, 2015"
+output: 
+  pdf_document:
+    toc: true
+  html_document:
+    toc: true
 ---
 
+
+The three "back ticks" (\`) must be followed by curly brackets "{", and then "r" to tell the computer that you are using R code.  This line is then closed off by another curly bracket "}". 
+
+Anything before three more back ticks "```" are then considered R code (a script).  
+
+If any code in the document has just a backtick \` then nothing, then another backtick, then that word is just printed as if it were code, such as `hey`.
+
+I'm reading in the bike lanes here.
+```{r readin}
+# readin is just a "label" for this code chunk
+## code chunk is just a "chunk" of code, where this code usually
+## does just one thing, aka a module
+### comments are still # here
+### you can do all your reading in there
+### let's say we loaded some packages
+library(stringr)
+library(plyr)
+fname <- "../../data/Bike_Lanes.csv"
+bike = read.csv(fname, as.is = TRUE)
+```
+
+You can write your introduction here.
+
+## Introduction
+Bike lanes are in Baltimore.  People like them.  Why are they so long?
+
+## Exploratory Analysis
+
+Let's look at some plots of bike length.  Let's say we wanted to look at what affects bike length.
+
+
+### Plots of bike length
+Note we made the subsection by using three "hashes" (pound signs): ###.
+
+We can turn off R code output by using `echo = FALSE` on the knitr code chunk.  s
+
 ```{r, echo = FALSE}
-library(knitr)
-opts_chunk$set(comment = "")
+no.missyear <- bike[ bike$dateInstalled != 0,]
+plot(no.missyear$dateInstalled, no.missyear$length)
+no.missyear$dateInstalled = factor(no.missyear$dateInstalled)
+boxplot(no.missyear$length ~ no.missyear$dateInstalled, main="Boxplots of Bike Lenght by Year", xlab="Year", ylab="Bike Length")
+
 ```
 
-```{r echo = FALSE}
-library('devtools')
+We have a total of `r nrow(no.missyear)` rows.
+
+What does it look like if we took the log (base 10) of the bike length:
+
+```{r}
+no.missyear$log.length <- log10(no.missyear$length)
+### see here that if you specify the data argument, you don't need to do the $ 
+boxplot(log.length ~ dateInstalled, data=no.missyear, main="Boxplots of Bike Lenght by Year", xlab="Year", ylab="Bike Length")
+```
+
+I want my boxplots colored, so I set the `col` argument.
+
+```{r}
+boxplot(log.length ~ dateInstalled, data=no.missyear, main="Boxplots of Bike Lenght by Year", xlab="Year", ylab="Bike Length", col="red")
+```
+
+As we can see, 2006 had a much higher bike length.  What about for the type of bike path?
+
+```{r}
+### type is a character, but when R sees a "character" in a "formula", then it automatically converts it to factor
+### a formula is something that has a y ~ x, which says I want to plot y against x
+### or if it were a model you would do y ~ x, which meant regress against y
+boxplot(log.length ~ type, data=no.missyear, main="Boxplots of Bike Lenght by Year", xlab="Year", ylab="Bike Length")
+```
+
+What if we want to extract means by each type?
+
+Let's show a few ways:
+```{r}
+### tapply takes in vector 1, then does a function by vector 2, and then you tell what 
+### that function is
+tapply(no.missyear$log.length, no.missyear$type, mean)
+
+## aggregate
+aggregate(x=no.missyear$log.length, by=list(no.missyear$type), FUN=mean)
+### now let's specify the data argument and use a "formula" - much easier to read and 
+## more "intuitive"
+aggregate(log.length ~ type, data=no.missyear, FUN=mean)
+
+## ddply is from the plyr package
+##takes in a data frame, (the first d refers to data.frame) 
+## splits it up by some variables (let's say type)
+## then we'll use summarise to summarize whatever we want
+## then returns a data.frame (the second d) - hence why it's ddply
+## if we wanted to do it on a "list" thne return data.frame, it'd be ldply
+ddply(no.missyear, .(type), summarise,
+      mean=mean(log.length)
+      )
 ```
 
 
-## Reproducible research
+`ddply` (and other functions in the `plyr` package) is cool because you can do multiple functions really easy.   
 
-> * Have you heard about it?
-> * Maybe you've heard about the [Cousera Reproducible Research](https://www.coursera.org/course/repdata) course
-> * How would you define it?
-> * Is it the same as replicability?
-> * Is it important?
+Let's show a what if we wanted to go over `type` and `dateInstalled`:
+```{r}
+### For going over 2 variables, we need to do it over a "list" of vectors
+tapply(no.missyear$log.length, 
+       list(no.missyear$type, no.missyear$dateInstalled), 
+       mean)
 
-##
+tapply(no.missyear$log.length, 
+       list(no.missyear$type, no.missyear$dateInstalled), 
+       mean, na.rm=TRUE)
 
-    Science moves forward then discoveries are replicated
-    and reproduced
+## aggregate - looks better
+aggregate(log.length ~ type + dateInstalled, data=no.missyear, FUN=mean)
 
-[_Implementing Reproducible Research_](https://osf.io/s9tya/wiki/home/)
-
-## Replication
-
-    Replication, the practice of independently implementing
-    scientific experiments to validate specific findings,
-     is the cornerstone of discovering scientific truth.
-
-[_Implementing Reproducible Research_](https://osf.io/s9tya/wiki/home/)
-
-## Reproducibility
-
-    Reproducibility can be thought of as a different
-    standard of validity from replication because it
-    forgoes independent data collection and uses the
-    methods and data collected by the original investigator.
-
-[_Implementing Reproducible Research_](https://osf.io/s9tya/wiki/home/)
-
-## A bit more practical
-
-    The sharing of analytic data and computer codes
-    uses to map those data into computational results
-    is central to any comprehensive definition of
-    reproducibility.
-    
-[_Implementing Reproducible Research_](https://osf.io/s9tya/wiki/home/)
-
-## Why its important?
-
-    Except for the simplest of analyses, the computer
-    code used to analyze a dataset is the only record
-    that permits others to fully understand what a
-    researcher has done.
-
-[_Implementing Reproducible Research_](https://osf.io/s9tya/wiki/home/)
-
-## Scrapping example
-
-> * Open [Scrapping Ravens data from ESPN](http://rpubs.com/lcollado/4080)
-> * Is this document reproducible?
-> * What information is missing?
-> * How could we improve it?
-> * What about [rMaps Mexico map](http://lcolladotor.github.io/2014/02/26/excited-by-willingness-to-help-get-things-done/#.VYL992RVhHw)?
-
-## R session information {.smaller}
-
-```{r 'sessionInfo'}
-sessionInfo()
+## ddply is from the plyr package
+ddply(no.missyear, .(type, dateInstalled), summarise,
+      mean=mean(log.length),
+      median=median(log.length),
+      Mode=mode(log.length),
+      Std.Dev=sd(log.length)
+      )
 ```
 
-## {.smaller}
 
-```{r 'session_info'}
-library('devtools'); session_info()
+
+OK let's do an linear model
+```{r}
+### type is a character, but when R sees a "character" in a "formula", then it automatically converts it to factor
+### a formula is something that has a y ~ x, which says I want to plot y against x
+### or if it were a model you would do y ~ x, which meant regress against y
+mod.type = lm(log.length ~ type, data=no.missyear)
+mod.yr = lm(log.length ~ factor(dateInstalled), data=no.missyear)
+mod.yrtype = lm(log.length ~ type + factor(dateInstalled), data=no.missyear)
+summary(mod.type)
 ```
 
-## Reproducible documents
+That's rather UGLY, so let's use a package called `xtable` and then make this model into an `xtable` object and then print it out nicely.  
 
-> * Have you ever had your code in one file, your description of the results in another file?
-> * Ever made copy-paste mistakes?
-> * What if you were asked to change some models or revise the document?
-> * Was it easy to maintain?
+```{r}
+### DON'T DO THIS.  YOU SHOULD ALWAYS DO library() statements in the FIRST code chunk.
+### this is just to show you the logic of a report/analysis.
+require(xtable)
+# smod <- summary(mod.yr)
+xtab <- xtable(mod.yr)
+```
 
-##
+Well `xtable` can make html tables, so let's print this.  We must tell R that the results is actually an html output, so we say the results should be embedded in the html "asis" (aka just print out whatever R spits out).
+```{r, results='asis'}
+print.xtable(xtab, type="html")
+```
 
-![Exhausted](https://isomkuade.files.wordpress.com/2012/07/exhausted1.jpg)
+OK, that's pretty good, but let's say we have all three models.  Another package called `stargazer` can put models together easily and pritn them out.  So `xtable` is really good when you are trying to print out a table (in html, otherwise make the table and use `write.csv` to get it in Excel and then format) really quickly and in a report.  But it doesn't work so well with *many* models together.  So let's use stargazer.  Again, you need to use `install.packages("stargazer")` if you don't have function.  
 
-> * What would be a reproducible document for you?
-
-## Reproducible docs in R
-
-> * [R Markdown](http://rmarkdown.rstudio.com/) is the easiest
-> * It's based on [Markdown](http://daringfireball.net/projects/markdown/basics): simple human readable syntax that generates HTML docs
-> * Also uses [Pandoc](http://pandoc.org/) to create files in many formats
-> * You maintain a __single__ file! It has the code, figures and description of results. It then creates a file in the format you want to share with others.
-
-## Markdown
-
-![Markdown overview](http://rmarkdown.rstudio.com/images/markdownOverview.png)
+```{r}
+require(stargazer)
+```
 
 
-## Markdown + R code
+OK, so what's the difference here?  First off, we said results are "markup", so that it will not try to reformat the output.  Also, I didn't want those # for comments, so I just made comment an empty string "". 
 
-![Markdown and R](http://rmarkdown.rstudio.com/images/markdownChunk.png)
+```{r, results='markup', comment=""}
+stargazer(mod.yr, mod.type, mod.yrtype, type="text")
+```
+
+If we use 
+```{r, results='asis', comment=""}
+stargazer(mod.yr, mod.type, mod.yrtype, type="html")
+```
 
 
-## Examples
+## Data Extraction
+Let's say I want to get data INTO my text.  Like there are N number of bike lanes with a date installed that isn't zero.  There are `r nrow(no.missyear)` bike lanes with a date installed after 2006.  So you use one backtick ` and then you say "r" to tell that it's R code.  And then you run R code that gets evaulated and then returns the value.  Let's say you want to compute a bunch of things:
 
-> * [R Programming for Data Science](https://leanpub.com/rprogramming) (can buy for $0.00)
-> * [Advanced R](http://adv-r.had.co.nz/), for example [Data structures](http://adv-r.had.co.nz/Data-structures.html)
-> * [Polyester: simulating RNA-seq datasets with differential transcript expression](https://github.com/leekgroup/polyester_code/blob/master/polyester_manuscript.Rmd) paper which creates [this html](http://htmlpreview.github.io/?https://github.com/alyssafrazee/polyester_code/blob/master/polyester_manuscript.html).
-> * [Timing information report](https://github.com/leekgroup/derSoftware/blob/gh-pages/timing/timing.Rmd) which renders into [this html](http://lcolladotor.github.io/derSoftware/timing/timing.html). Note that it has an interactive table.
+```{r computes}
+### let's get number of bike lanes installed by year
+n.lanes = ddply(no.missyear, .(dateInstalled), nrow)
+names(n.lanes) <- c("date", "nlanes")
+n2009 <- n.lanes$nlanes[ n.lanes$date == 2009]
+n2010 <- n.lanes$nlanes[ n.lanes$date == 2010]
+getwd()
+```
 
-## 
+Now I can just say there are `r n2009` lanes in 2009 and `r n2010` in 2010.  
 
-![Lets code](http://dgdc5.digitalgameslearning.org/dgdc_5th/wp-content/uploads/lc.png)
+```{r}
+fname <- "../../data/Charm_City_Circulator_Ridership.csv"
+# fname <- file.path(data.dir, "Charm_City_Circulator_Ridership.csv")
+## file.path takes a directory and makes a full name with a full file path
+charm = read.csv(fname, as.is=TRUE)
 
-## Misc
+library(chron)
+days = levels(weekdays(1, abbreviate=FALSE))
+charm$day <- factor(charm$day, levels=days)
+charm$date <- as.Date(charm$date, format="%m/%d/%Y")
+cn <- colnames(charm)
+daily <- charm[, c("day", "date", "daily")]
 
-* [R Markdown](http://rmarkdown.rstudio.com/): where to go to learn more
-* [Example R Markdown doc](https://gist.github.com/jeromyanglim/2716336)
-* [An example interactive document](https://cpsievert.shinyapps.io/animintRmarkdown/): beyond the scope of this course, but cool to know it exists. 
-* [Another intro to R Markdown presentation](http://cpsievert.github.io/slides/markdown/#/)
-* [Where do I start using Bioconductor?](http://lcolladotor.github.io/2014/10/16/startBioC/#.VYL_aGRVhHx)
+```
+
+
+```{r}
+charm$daily <- NULL
+require(reshape2)
+long.charm <- melt(charm, id.vars = c("day", "date"))
+long.charm$type <- "Boardings"
+long.charm$type[ grepl("Alightings", long.charm$variable)] <- "Alightings"
+long.charm$type[ grepl("Average", long.charm$variable)] <- "Average"
+
+long.charm$line <- "orange"
+long.charm$line[ grepl("purple", long.charm$variable)] <- "purple"
+long.charm$line[ grepl("green", long.charm$variable)] <- "green"
+long.charm$line[ grepl("banner", long.charm$variable)] <- "banner"
+long.charm$variable <- NULL
+
+long.charm$line <-factor(long.charm$line, levels=c("orange", "purple", 
+                                                   "green", "banner"))
+
+head(long.charm)
+
+### NOW R has a column of day, the date, a "value", the type of value and the 
+### circulator line that corresponds to it
+### value is now either the Alightings, Boardings, or Average from the charm dataset
+```
+
+Let's do some plotting now!
+```{r plots}
+require(ggplot2)
+### let's make a "ggplot"
+### the format is ggplot(dataframe, aes(x=COLNAME, y=COLNAME))
+### where COLNAME are colnames of the dataframe
+### you can also set color to a different factor
+### other options in AES (fill, alpha level -which is the "transparency" of points)
+g <- ggplot(long.charm, aes(x=date, y=value, color=line)) 
+### let's change the colors to what we want- doing this manually, not letting it choose
+### for me
+g <- g + scale_color_manual(values=c("orange", "purple", "green", "blue"))
+### plotting points
+g + geom_point()
+### Let's make Lines!
+g + geom_line()
+### let's make a new plot of poitns
+gpoint <- g + geom_point()
+### let's plot the value by the type of value - boardings/average, etc
+gpoint + facet_wrap(~ type)
+```
+
+OK let's turn off some warnings - making `warning=FALSE` (in knitr) as an option.
+```{r, warning=FALSE}
+## let's compare vertically 
+gpoint + facet_wrap(~ type, ncol=1)
+
+gfacet = g + facet_wrap(~ type, ncol=1)
+```
+
+We can also smooth the data to give us a overall idea of how the average changes over time.  I don't want to do a standard error (`se`).  
+
+```{r, warning=FALSE}
+## let's smooth this - get a rough estimate of what's going on
+gfacet + geom_smooth(se=FALSE)
+```
+
+OK, I've seen enough code, let's turn that off, using `echo=FALSE`.
+```{r, echo=FALSE, warning=FALSE, fig.width=10, fig.height=5}
+#### COMBINE! - let's make the line width bigger (lwd)
+### also making the "alpha level" (transparency) low for the point sos we can see the lines
+g + geom_point(alpha=0.2) +  geom_smooth(se=FALSE, lwd=1.5) + facet_wrap( ~ type)
+```
+
+There are still messages, but we can turn these off with `message = FALSE`
+
+```{r, echo=FALSE, warning=FALSE, message = FALSE, fig.width=10, fig.height=5}
+g + geom_point(alpha=0.2) +  geom_smooth(se=FALSE, lwd=1.5) + facet_wrap( ~ type)
+```
