--- a/Data_IO/lecture/Data_IO.Rmd
+++ b/Data_IO/lecture/Data_IO.Rmd
@@ -54,8 +54,7 @@ dir("..")
 
 ## Data Input
 
-* We used several pre-installed sample datasets during previous modules (`CO2`, `iris`) 
-* However, 'reading in' data is the first step of any real project/analysis
+* 'Reading in' data is the first step of any real project/analysis
 * R can read almost any file format, especially via add-on packages
 * We are going to focus on simple delimited files first
     * tab delimited (e.g. '.txt')
